Fix overflow issue

--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,4 @@
-body {
+.form-container {
    background: #fff;
    color: #333;
    overflow-y: hidden;
